--- a/Blue Dual Can Bus Board.ioc
+++ b/Blue Dual Can Bus Board.ioc
@@ -31,19 +31,21 @@ Mcu.Name=STM32F105R(8-B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PB5
-Mcu.Pin11=PB6
-Mcu.Pin12=VP_IWDG_VS_IWDG
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin2=PA11
-Mcu.Pin3=PA12
-Mcu.Pin4=PA13
-Mcu.Pin5=PA14
-Mcu.Pin6=PA15
-Mcu.Pin7=PC10
-Mcu.Pin8=PC11
-Mcu.Pin9=PC12
-Mcu.PinsNb=14
+Mcu.Pin10=PC12
+Mcu.Pin11=PB4
+Mcu.Pin12=PB5
+Mcu.Pin13=PB6
+Mcu.Pin14=VP_IWDG_VS_IWDG
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin2=PA5
+Mcu.Pin3=PA11
+Mcu.Pin4=PA12
+Mcu.Pin5=PA13
+Mcu.Pin6=PA14
+Mcu.Pin7=PA15
+Mcu.Pin8=PC10
+Mcu.Pin9=PC11
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F105RBTx
@@ -54,6 +56,8 @@ NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.CAN2_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -77,6 +81,14 @@ PA15.GPIO_Label=CONF_BMW_EXTI
 PA15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PA15.Locked=true
 PA15.Signal=GPXTI15
+PA5.GPIOParameters=GPIO_ModeDefaultEXTI
+PA5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PA5.Locked=true
+PA5.Signal=GPXTI5
+PB4.GPIOParameters=GPIO_ModeDefaultEXTI
+PB4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PB4.Locked=true
+PB4.Signal=GPXTI4
 PB5.Locked=true
 PB5.Mode=CAN_Activate
 PB5.Signal=CAN2_RX
@@ -163,6 +175,10 @@ RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI15.0=GPIO_EXTI15
 SH.GPXTI15.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
 UART4.IPParameters=VirtualMode
 UART4.VirtualMode=Asynchronous
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
